# evelin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
core/src/: config.rs  document.rs  error.rs  eval-config.toml  eval.rs  gate.rs  lib.rs  main.rs  runtime.rs  schema.rs  skill-suite.schema.yaml  suite.rs
docs/: release-contract.md
integration-tests/: run-eval.sh  run.sh
integration-tests/fixtures/scope-to-acceptance-project/skills/scope-to-acceptance/: SKILL.md
integration-tests/fixtures/scope-to-acceptance-project/tests/src/skills/scope-to-acceptance/: suite.eval.yaml
integration-tests/skills/hello-world/: SKILL.md
integration-tests/tests/skills/hello-world/: invocation.eval.yaml
scripts/: install-evelin.sh  package-release.sh  sync-to-agents.sh
