[package]
name = "evelin"
version = "0.1.0"
edition = "2021"
description = "Rust evaluation library and CLI for modern AI agent assets."
license = "MIT"

[lib]
name = "evelin"
path = "core/src/lib.rs"

[[bin]]
name = "evelin"
path = "core/src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.19"
thiserror = "2.0"
toml = "0.8"
walkdir = "2.5"
wait-timeout = "0.2"
which = "7.0"

[dev-dependencies]
serde_json = "1.0"
